--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Imporiente cuenta con el mejor servicio de villaviencio y toda la calidad que necesitas">
+    <meta name="keywords" content="imporiente,television,internet">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -208,7 +210,6 @@
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
-                <li><a href="">Resolucion 19012 2020</a></li>
                 <li><a href="pqr.php">PQR</a></li>
             </ul>
         </div>
