--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Imporiente cuenta con el mejor servicio de villaviencio y toda la calidad que necesitas">
+    <meta name="keywords" content="imporiente,television,internet">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -56,8 +58,8 @@
                         <li><a href="https://www.google.com/maps/d/edit?mid=1gLGbxKiMrbnt_qgKGIpqEshOgkSp4oL-&usp=sharing" target="_blank">Mapa Redes Fibra Óptica Propia</li>
                         <li><a href="https://www.google.com/maps/d/edit?mid=16DN1-0xResbJDSP2nrVgDV9EQa-ZDvRh&usp=sharing" target="_blank">Mapa de Cobertura</li>
                         <li><a href="combos.html">Planes y Tarifas</li>
-                        <!-- <li><a href="">Términos, condiciones y garantía Wifi Extendido</li> -->
-                        <li><a href="">Factores que limitan la navegación</li>
+                        <li><a href="../pdf/Regimen de protección a usuarios.pdf" target="_blank">Regimen de Proteccion al Usuario</li>
+                        <li><a href="../pdf/factores-que-limitan-la-velocidad.pdf" target="_blank">Factores que limitan la navegación</li>
                         <li><a href="">Recomendaciones de seguridad</li>
                         <li><a href="">Riesgos a la seguridad de la red</li>
                         <li><a href="">Conoce tu factura</li>
@@ -103,7 +105,6 @@
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
-                <li><a href="">Resolucion 19012 2020</a></li>
                  <li><a href="pqr.php">PQR</a></li>
             </ul>
         </div>
