--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Imporiente cuenta con el mejor servicio de villaviencio y toda la calidad que necesitas">
+    <meta name="keywords" content="imporiente,television,internet">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
