--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Imporiente cuenta con el mejor servicio de villaviencio y toda la calidad que necesitas">
+    <meta name="keywords" content="imporiente,television,internet">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
@@ -15,16 +17,16 @@
     <header>
         <div class="contenedor">
             <a href="index.html">
-                <img src="img/Logo.svg" alt="Imporiente" class="imagen">
+                <img src="img/Logo.svg" alt="Imporiente" loading="lazy" class="imagen">
             </a>
             <nav>
                 <a href="Enlaces/acercade.html">Acerca de</a>
                 <a href="Enlaces/television.html">Television</a>
                 <a href="Enlaces/combos.html">Combos</a>
                 <a href="Enlaces/proteccion.html">Proteccion al Usuario</a>
-                <a href="">Paga tu Factura</a>
-                <a href="">Contactanos</a>
-                <a href="">PQR</a>
+                <a href="#">Paga tu Factura</a>
+                <a href="Enlaces/Contactenos.php">Contactanos</a>
+                <a href="Enlaces/pqr.php">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -32,40 +34,40 @@
     <main>
         <section class="slider-contenedor">
             <ul class="slider">
-                <li><img src="img/slider/1.png" alt=""></li>
-                <li><img src="img/slider/2.png" alt=""></li>
-                <li><img src="img/slider/3.png" alt=""></li>
+                <li><img src="img/slider/1.png" loading="lazy" alt=""></li>
+                <li><img src="img/slider/2.png" loading="lazy" alt=""></li>
+                <li><img src="img/slider/3.png" loading="lazy" alt=""></li>
             </ul>
         </section>
         <section>
             <div class="menu-datos">
-                <a href=""><img src="img/oficinas.png" alt="Oficinas">Nuestras Oficinas</a>
-                <a href=""><img src="img/SpeedTest.png" alt="Test Velocidad">Test de Velocidad</a>
-                <a href=""><img src="img/Cobertura.png" alt="Cobertura">Cobertura</a>
-                <a href=""><img src="img/pse.png" alt="Pagos"></a>
+                <a href=""><img src="img/oficinas.png" loading="lazy" alt="Oficinas">Nuestras Oficinas</a>
+                <a href=""><img src="img/SpeedTest.png" loading="lazy" alt="Test Velocidad">Test de Velocidad</a>
+                <a href=""><img src="img/Cobertura.png" loading="lazy" alt="Cobertura">Cobertura</a>
+                <a href=""><img src="img/pse.png" loading="lazy" alt="Pagos"></a>
             </div>
             <div class="columna-4">
-                <a href="" ><img src="img/oficinas.png" alt="Oficinas" class="columna-50">Nuestras Oficinas</a>
-                <a href=""><img src="img/SpeedTest.png" alt="Test Velocidad" class="columna-50">Test de Velocidad</a>
-                <a href=""><img src="img/Cobertura.png" alt="Cobertura">Cobertura</a>
-                <a href=""><img src="img/pse.png" alt="Pagos">Paga tu Servicio</a>
+                <a href="" ><img src="img/oficinas.png" loading="lazy" alt="Oficinas" class="columna-50">Nuestras Oficinas</a>
+                <a href=""><img src="img/SpeedTest.png" loading="lazy" alt="Test Velocidad" class="columna-50">Test de Velocidad</a>
+                <a href=""><img src="img/Cobertura.png" loading="lazy" alt="Cobertura">Cobertura</a>
+                <a href=""><img src="img/pse.png" loading="lazy" alt="Pagos">Paga tu Servicio</a>
             </div>
         </section>
         <section class="comercial"> 
             <h3>La Mejor Televisión a los Mejores Precios</h3>
             <div class="infocomercial">
-                <img src="img/Comercial-1.png" alt="Canales">
-                <img src="img/Comercial-2.png" alt="Internet">
+                <img src="img/Comercial-1.png" loading="lazy" alt="Canales">
+                <img src="img/Comercial-2.png" loading="lazy"alt="Internet">
             </div>
         </section>
         <section class="informativo">
             <div>
                 <p>Trabajamos con la mejor tecnología permitiendo a nuestros clientes contar con la última tecnología en conexión además de tener un equipo profesional y capacitado para tener la mejor atención en el menos tiempo.</p>
-                <img src="img/tecnico.png" alt="">
+                <img src="img/tecnico.png" loading="lazy" alt="">
             </div>
         </section>
         <section class="crc">
-            <img src="img/bamnnercrcabril2020.jpg" alt="">
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
@@ -76,14 +78,14 @@
                 <li><a href="Enlaces/combos.html">Combos</a></li>
                 <li><a href="Enlaces/proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
-                <li><a href="">Contactanos</a></li>
+                <li><a href="Enlaces/Contactenos.php">Contactanos</a></li>
             </ul>
         </div>
         <div class="columna columna-50 derecha">
             <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
-                <li><a href="">PQR</a></li>
+                <li><a href="Enlaces/pqr.php">PQR</a></li>
 <!--                  <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li> -->
