--- a/Enlaces/television.html
+++ b/Enlaces/television.html
@@ -419,7 +419,7 @@
         </section>
         <!-- Imagen de Covid19 -->
         <section class="crc">
-            <a href="" target="_blank"><img src="../img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
+            <a href="" target="_blank"><img src="../img/bamnnercrcabril2020.jfif" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
