--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </section>
         <section class="crc">
-            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="img/bamnnercrcabril2020.jfif" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
