--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -62,7 +62,7 @@
         </section>
         <!-- Imagen de Covid19 -->
         <section class="crc">
-            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="../img/bamnnercrcabril2020.jpg" loading="lazy" alt=""></a>
+            <a href="https://www.crcom.gov.co/es/pagina/regimen-proteccion-usuario" target="_blank"><img src="../img/bamnnercrcabril2020.jfif" loading="lazy" alt=""></a>
         </section>
     </main>
     <footer>    
